Проектирование трансляторов/lab3/y.output
State 26 conflicts: 3 shift/reduce
State 27 conflicts: 3 shift/reduce
State 28 conflicts: 3 shift/reduce
State 29 conflicts: 3 shift/reduce
State 30 conflicts: 3 shift/reduce
State 31 conflicts: 3 shift/reduce
State 32 conflicts: 3 shift/reduce
State 33 conflicts: 3 shift/reduce
State 34 conflicts: 3 shift/reduce
State 35 conflicts: 3 shift/reduce
State 36 conflicts: 3 shift/reduce
State 37 conflicts: 3 shift/reduce
State 38 conflicts: 3 shift/reduce
State 39 conflicts: 1 shift/reduce
State 40 conflicts: 3 shift/reduce
State 41 conflicts: 3 shift/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce


Grammar

    0 $accept: goal $end

    1 goal: S_EXPR
    2     | error

    3 S_EXPR: ATOM
    4       | LP ADD S_EXPR S_EXPR RP
    5       | LP SUB S_EXPR S_EXPR RP
    6       | LP QUOTE S_EXPR RP
    7       | LP CAR S_EXPR RP
    8       | LP CDR S_EXPR RP
    9       | LP CONS S_EXPR S_EXPR RP
   10       | LP ATOM_PREDICATE S_EXPR RP
   11       | LP EQUAL S_EXPR S_EXPR RP
   12       | LP MUL S_EXPR S_EXPR RP
   13       | LP DIVE S_EXPR S_EXPR RP
   14       | LP REM S_EXPR S_EXPR RP
   15       | LP LE S_EXPR S_EXPR RP
   16       | LP COND S_EXPR S_EXPR S_EXPR RP
   17       | LP LAMBDA LP PARAM_LIST RP S_EXPR RP
   18       | LP LET S_EXPR PAIR_LIST RP
   19       | LP LETREC S_EXPR PAIR_LIST RP
   20       | LP LIST_S_EXPR RP
   21       | LP RP

   22 PAIR: LP VAR S_EXPR RP

   23 PAIR_LIST: ε
   24          | PAIR
   25          | PAIR_LIST PAIR

   26 PARAM: S_ATOM

   27 PARAM_LIST: ε
   28           | PARAM
   29           | PARAM_LIST PARAM

   30 VAR: S_ATOM

   31 ATOM: S_ATOM
   32     | D_ATOM
   33     | COMMAND

   34 COMMAND: QUOTE
   35        | CAR
   36        | CDR
   37        | CONS
   38        | ATOM_PREDICATE
   39        | EQUAL
   40        | ADD
   41        | SUB
   42        | MUL
   43        | DIVE
   44        | REM
   45        | LE
   46        | COND
   47        | LAMBDA
   48        | LET
   49        | LETREC

   50 LIST_S_EXPR: S_EXPR_LIST

   51 S_EXPR_LIST: S_EXPR
   52            | S_EXPR_LIST S_EXPR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2
    LP <node> (258) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    RP <node> (259) 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22
    QUOTE <node> (260) 6 34
    CAR <node> (261) 7 35
    CDR <node> (262) 8 36
    CONS <node> (263) 9 37
    ATOM_PREDICATE <node> (264) 10 38
    EQUAL <node> (265) 11 39
    ADD <node> (266) 4 40
    SUB <node> (267) 5 41
    MUL <node> (268) 12 42
    DIVE <node> (269) 13 43
    REM <node> (270) 14 44
    LE <node> (271) 15 45
    COND <node> (272) 16 46
    LAMBDA <node> (273) 17 47
    LET <node> (274) 18 48
    LETREC <node> (275) 19 49
    S_ATOM <str> (276) 26 30 31
    D_ATOM <num> (277) 32


Nonterminals, with rules where they appear

    $accept (23)
        on left: 0
    goal <node> (24)
        on left: 1 2
        on right: 0
    S_EXPR <node> (25)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 1 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 22 51 52
    PAIR <node> (26)
        on left: 22
        on right: 24 25
    PAIR_LIST <node> (27)
        on left: 23 24 25
        on right: 18 19 25
    PARAM <node> (28)
        on left: 26
        on right: 28 29
    PARAM_LIST <node> (29)
        on left: 27 28 29
        on right: 17 29
    VAR <node> (30)
        on left: 30
        on right: 22
    ATOM <node> (31)
        on left: 31 32 33
        on right: 3
    COMMAND <node> (32)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
        on right: 33
    LIST_S_EXPR <node> (33)
        on left: 50
        on right: 20
    S_EXPR_LIST <node> (34)
        on left: 51 52
        on right: 50 52


State 0

    0 $accept: • goal $end

    error           shift, and go to state 1
    LP              shift, and go to state 2
    QUOTE           shift, and go to state 3
    CAR             shift, and go to state 4
    CDR             shift, and go to state 5
    CONS            shift, and go to state 6
    ATOM_PREDICATE  shift, and go to state 7
    EQUAL           shift, and go to state 8
    ADD             shift, and go to state 9
    SUB             shift, and go to state 10
    MUL             shift, and go to state 11
    DIVE            shift, and go to state 12
    REM             shift, and go to state 13
    LE              shift, and go to state 14
    COND            shift, and go to state 15
    LAMBDA          shift, and go to state 16
    LET             shift, and go to state 17
    LETREC          shift, and go to state 18
    S_ATOM          shift, and go to state 19
    D_ATOM          shift, and go to state 20

    goal     go to state 21
    S_EXPR   go to state 22
    ATOM     go to state 23
    COMMAND  go to state 24


State 1

    2 goal: error •

    $default  reduce using rule 2 (goal)


State 2

    4 S_EXPR: LP • ADD S_EXPR S_EXPR RP
    5       | LP • SUB S_EXPR S_EXPR RP
    6       | LP • QUOTE S_EXPR RP
    7       | LP • CAR S_EXPR RP
    8       | LP • CDR S_EXPR RP
    9       | LP • CONS S_EXPR S_EXPR RP
   10       | LP • ATOM_PREDICATE S_EXPR RP
   11       | LP • EQUAL S_EXPR S_EXPR RP
   12       | LP • MUL S_EXPR S_EXPR RP
   13       | LP • DIVE S_EXPR S_EXPR RP
   14       | LP • REM S_EXPR S_EXPR RP
   15       | LP • LE S_EXPR S_EXPR RP
   16       | LP • COND S_EXPR S_EXPR S_EXPR RP
   17       | LP • LAMBDA LP PARAM_LIST RP S_EXPR RP
   18       | LP • LET S_EXPR PAIR_LIST RP
   19       | LP • LETREC S_EXPR PAIR_LIST RP
   20       | LP • LIST_S_EXPR RP
   21       | LP • RP

    LP              shift, and go to state 2
    RP              shift, and go to state 25
    QUOTE           shift, and go to state 26
    CAR             shift, and go to state 27
    CDR             shift, and go to state 28
    CONS            shift, and go to state 29
    ATOM_PREDICATE  shift, and go to state 30
    EQUAL           shift, and go to state 31
    ADD             shift, and go to state 32
    SUB             shift, and go to state 33
    MUL             shift, and go to state 34
    DIVE            shift, and go to state 35
    REM             shift, and go to state 36
    LE              shift, and go to state 37
    COND            shift, and go to state 38
    LAMBDA          shift, and go to state 39
    LET             shift, and go to state 40
    LETREC          shift, and go to state 41
    S_ATOM          shift, and go to state 19
    D_ATOM          shift, and go to state 20

    S_EXPR       go to state 42
    ATOM         go to state 23
    COMMAND      go to state 24
    LIST_S_EXPR  go to state 43
    S_EXPR_LIST  go to state 44


State 3

   34 COMMAND: QUOTE •

    $default  reduce using rule 34 (COMMAND)


State 4

   35 COMMAND: CAR •

    $default  reduce using rule 35 (COMMAND)


State 5

   36 COMMAND: CDR •

    $default  reduce using rule 36 (COMMAND)


State 6

   37 COMMAND: CONS •

    $default  reduce using rule 37 (COMMAND)


State 7

   38 COMMAND: ATOM_PREDICATE •

    $default  reduce using rule 38 (COMMAND)


State 8

   39 COMMAND: EQUAL •

    $default  reduce using rule 39 (COMMAND)


State 9

   40 COMMAND: ADD •

    $default  reduce using rule 40 (COMMAND)


State 10

   41 COMMAND: SUB •

    $default  reduce using rule 41 (COMMAND)


State 11

   42 COMMAND: MUL •

    $default  reduce using rule 42 (COMMAND)


State 12

   43 COMMAND: DIVE •

    $default  reduce using rule 43 (COMMAND)


State 13

   44 COMMAND: REM •

    $default  reduce using rule 44 (COMMAND)


State 14

   45 COMMAND: LE •

    $default  reduce using rule 45 (COMMAND)


State 15

   46 COMMAND: COND •

    $default  reduce using rule 46 (COMMAND)


State 16

   47 COMMAND: LAMBDA •

    $default  reduce using rule 47 (COMMAND)


State 17

   48 COMMAND: LET •

    $default  reduce using rule 48 (COMMAND)


State 18

   49 COMMAND: LETREC •

    $default  reduce using rule 49 (COMMAND)


State 19

   31 ATOM: S_ATOM •

    $default  reduce using rule 31 (ATOM)


State 20

   32 ATOM: D_ATOM •

    $default  reduce using rule 32 (ATOM)


State 21

    0 $accept: goal • $end

    $end  shift, and go to state 45


State 22

    1 goal: S_EXPR •

    $default  reduce using rule 1 (goal)


State 23

    3 S_EXPR: ATOM •

    $default  reduce using rule 3 (S_EXPR)


State 24

   33 ATOM: COMMAND •

    $default  reduce using rule 33 (ATOM)


State 25

   21 S_EXPR: LP RP •

    $default  reduce using rule 21 (S_EXPR)


State 26

    6 S_EXPR: LP QUOTE • S_EXPR RP
   34 COMMAND: QUOTE •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    ADD     shift, and go to state 9
    SUB     shift, and go to state 10
    MUL     shift, and go to state 11
    DIVE    shift, and go to state 12
    REM     shift, and go to state 13
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 34 (COMMAND)]
    S_ATOM    [reduce using rule 34 (COMMAND)]
    D_ATOM    [reduce using rule 34 (COMMAND)]
    $default  reduce using rule 34 (COMMAND)

    S_EXPR   go to state 46
    ATOM     go to state 23
    COMMAND  go to state 24


State 27

    7 S_EXPR: LP CAR • S_EXPR RP
   35 COMMAND: CAR •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    ADD     shift, and go to state 9
    SUB     shift, and go to state 10
    MUL     shift, and go to state 11
    DIVE    shift, and go to state 12
    REM     shift, and go to state 13
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 35 (COMMAND)]
    S_ATOM    [reduce using rule 35 (COMMAND)]
    D_ATOM    [reduce using rule 35 (COMMAND)]
    $default  reduce using rule 35 (COMMAND)

    S_EXPR   go to state 47
    ATOM     go to state 23
    COMMAND  go to state 24


State 28

    8 S_EXPR: LP CDR • S_EXPR RP
   36 COMMAND: CDR •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    ADD     shift, and go to state 9
    SUB     shift, and go to state 10
    MUL     shift, and go to state 11
    DIVE    shift, and go to state 12
    REM     shift, and go to state 13
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 36 (COMMAND)]
    S_ATOM    [reduce using rule 36 (COMMAND)]
    D_ATOM    [reduce using rule 36 (COMMAND)]
    $default  reduce using rule 36 (COMMAND)

    S_EXPR   go to state 48
    ATOM     go to state 23
    COMMAND  go to state 24


State 29

    9 S_EXPR: LP CONS • S_EXPR S_EXPR RP
   37 COMMAND: CONS •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    ADD     shift, and go to state 9
    SUB     shift, and go to state 10
    MUL     shift, and go to state 11
    DIVE    shift, and go to state 12
    REM     shift, and go to state 13
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 37 (COMMAND)]
    S_ATOM    [reduce using rule 37 (COMMAND)]
    D_ATOM    [reduce using rule 37 (COMMAND)]
    $default  reduce using rule 37 (COMMAND)

    S_EXPR   go to state 49
    ATOM     go to state 23
    COMMAND  go to state 24


State 30

   10 S_EXPR: LP ATOM_PREDICATE • S_EXPR RP
   38 COMMAND: ATOM_PREDICATE •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    ADD     shift, and go to state 9
    SUB     shift, and go to state 10
    MUL     shift, and go to state 11
    DIVE    shift, and go to state 12
    REM     shift, and go to state 13
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 38 (COMMAND)]
    S_ATOM    [reduce using rule 38 (COMMAND)]
    D_ATOM    [reduce using rule 38 (COMMAND)]
    $default  reduce using rule 38 (COMMAND)

    S_EXPR   go to state 50
    ATOM     go to state 23
    COMMAND  go to state 24


State 31

   11 S_EXPR: LP EQUAL • S_EXPR S_EXPR RP
   39 COMMAND: EQUAL •

    LP      shift, and go to state 2
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 39 (COMMAND)]
    S_ATOM    [reduce using rule 39 (COMMAND)]
    D_ATOM    [reduce using rule 39 (COMMAND)]
    $default  reduce using rule 39 (COMMAND)

    S_EXPR   go to state 51
    ATOM     go to state 23
    COMMAND  go to state 24


State 32

    4 S_EXPR: LP ADD • S_EXPR S_EXPR RP
   40 COMMAND: ADD •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 40 (COMMAND)]
    S_ATOM    [reduce using rule 40 (COMMAND)]
    D_ATOM    [reduce using rule 40 (COMMAND)]
    $default  reduce using rule 40 (COMMAND)

    S_EXPR   go to state 52
    ATOM     go to state 23
    COMMAND  go to state 24


State 33

    5 S_EXPR: LP SUB • S_EXPR S_EXPR RP
   41 COMMAND: SUB •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 41 (COMMAND)]
    S_ATOM    [reduce using rule 41 (COMMAND)]
    D_ATOM    [reduce using rule 41 (COMMAND)]
    $default  reduce using rule 41 (COMMAND)

    S_EXPR   go to state 53
    ATOM     go to state 23
    COMMAND  go to state 24


State 34

   12 S_EXPR: LP MUL • S_EXPR S_EXPR RP
   42 COMMAND: MUL •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 42 (COMMAND)]
    S_ATOM    [reduce using rule 42 (COMMAND)]
    D_ATOM    [reduce using rule 42 (COMMAND)]
    $default  reduce using rule 42 (COMMAND)

    S_EXPR   go to state 54
    ATOM     go to state 23
    COMMAND  go to state 24


State 35

   13 S_EXPR: LP DIVE • S_EXPR S_EXPR RP
   43 COMMAND: DIVE •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 43 (COMMAND)]
    S_ATOM    [reduce using rule 43 (COMMAND)]
    D_ATOM    [reduce using rule 43 (COMMAND)]
    $default  reduce using rule 43 (COMMAND)

    S_EXPR   go to state 55
    ATOM     go to state 23
    COMMAND  go to state 24


State 36

   14 S_EXPR: LP REM • S_EXPR S_EXPR RP
   44 COMMAND: REM •

    LP      shift, and go to state 2
    EQUAL   shift, and go to state 8
    LE      shift, and go to state 14
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 44 (COMMAND)]
    S_ATOM    [reduce using rule 44 (COMMAND)]
    D_ATOM    [reduce using rule 44 (COMMAND)]
    $default  reduce using rule 44 (COMMAND)

    S_EXPR   go to state 56
    ATOM     go to state 23
    COMMAND  go to state 24


State 37

   15 S_EXPR: LP LE • S_EXPR S_EXPR RP
   45 COMMAND: LE •

    LP      shift, and go to state 2
    COND    shift, and go to state 15
    LAMBDA  shift, and go to state 16
    LET     shift, and go to state 17
    LETREC  shift, and go to state 18
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 45 (COMMAND)]
    S_ATOM    [reduce using rule 45 (COMMAND)]
    D_ATOM    [reduce using rule 45 (COMMAND)]
    $default  reduce using rule 45 (COMMAND)

    S_EXPR   go to state 57
    ATOM     go to state 23
    COMMAND  go to state 24


State 38

   16 S_EXPR: LP COND • S_EXPR S_EXPR S_EXPR RP
   46 COMMAND: COND •

    LP      shift, and go to state 2
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 46 (COMMAND)]
    S_ATOM    [reduce using rule 46 (COMMAND)]
    D_ATOM    [reduce using rule 46 (COMMAND)]
    $default  reduce using rule 46 (COMMAND)

    S_EXPR   go to state 58
    ATOM     go to state 23
    COMMAND  go to state 24


State 39

   17 S_EXPR: LP LAMBDA • LP PARAM_LIST RP S_EXPR RP
   47 COMMAND: LAMBDA •

    LP  shift, and go to state 59

    LP        [reduce using rule 47 (COMMAND)]
    $default  reduce using rule 47 (COMMAND)


State 40

   18 S_EXPR: LP LET • S_EXPR PAIR_LIST RP
   48 COMMAND: LET •

    LP      shift, and go to state 2
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 48 (COMMAND)]
    S_ATOM    [reduce using rule 48 (COMMAND)]
    D_ATOM    [reduce using rule 48 (COMMAND)]
    $default  reduce using rule 48 (COMMAND)

    S_EXPR   go to state 60
    ATOM     go to state 23
    COMMAND  go to state 24


State 41

   19 S_EXPR: LP LETREC • S_EXPR PAIR_LIST RP
   49 COMMAND: LETREC •

    LP      shift, and go to state 2
    S_ATOM  shift, and go to state 19
    D_ATOM  shift, and go to state 20

    LP        [reduce using rule 49 (COMMAND)]
    S_ATOM    [reduce using rule 49 (COMMAND)]
    D_ATOM    [reduce using rule 49 (COMMAND)]
    $default  reduce using rule 49 (COMMAND)

    S_EXPR   go to state 61
    ATOM     go to state 23
    COMMAND  go to state 24


State 42

   51 S_EXPR_LIST: S_EXPR •

    $default  reduce using rule 51 (S_EXPR_LIST)


State 43

   20 S_EXPR: LP LIST_S_EXPR • RP

    RP  shift, and go to state 62


State 44

   50 LIST_S_EXPR: S_EXPR_LIST •
   52 S_EXPR_LIST: S_EXPR_LIST • S_EXPR

    LP              shift, and go to state 2
    QUOTE           shift, and go to state 3
    CAR             shift, and go to state 4
    CDR             shift, and go to state 5
    CONS            shift, and go to state 6
    ATOM_PREDICATE  shift, and go to state 7
    EQUAL           shift, and go to state 8
    ADD             shift, and go to state 9
    SUB             shift, and go to state 10
    MUL             shift, and go to state 11
    DIVE            shift, and go to state 12
    REM             shift, and go to state 13
    LE              shift, and go to state 14
    COND            shift, and go to state 15
    LAMBDA          shift, and go to state 16
    LET             shift, and go to state 17
    LETREC          shift, and go to state 18
    S_ATOM          shift, and go to state 19
    D_ATOM          shift, and go to state 20

    $default  reduce using rule 50 (LIST_S_EXPR)

    S_EXPR   go to state 63
    ATOM     go to state 23
    COMMAND  go to state 24


State 45

    0 $accept: goal $end •

    $default  accept


State 46

    6 S_EXPR: LP QUOTE S_EXPR • RP

    RP  shift, and go to state 64


State 47

    7 S_EXPR: LP CAR S_EXPR • RP

    RP  shift, and go to state 65


State 48

    8 S_EXPR: LP CDR S_EXPR • RP

    RP  shift, and go to state 66


State 49

    9 S_EXPR: LP CONS S_EXPR • S_EXPR RP

    LP              shift, and go to state 2
    QUOTE           shift, and go to state 3
    CAR             shift, and go to state 4
    CDR             shift, and go to state 5
    CONS            shift, and go to state 6
    ATOM_PREDICATE  shift, and go to state 7
    EQUAL           shift, and go to state 8
    ADD             shift, and go to state 9
    SUB             shift, and go to state 10
    MUL             shift, and go to state 11
    DIVE            shift, and go to state 12
    REM             shift, and go to state 13
    LE              shift, and go to state 14
    COND            shift, and go to state 15
    LAMBDA          shift, and go to state 16
    LET             shift, and go to state 17
    LETREC          shift, and go to state 18
    S_ATOM          shift, and go to state 19
    D_ATOM          shift, and go to state 20

    S_EXPR   go to state 67
    ATOM     go to state 23
    COMMAND  go to state 24


State 50

   10 S_EXPR: LP ATOM_PREDICATE S_EXPR • RP

    RP  shift, and go to state 68


State 51

   11 S_EXPR: LP EQUAL S_EXPR • S_EXPR RP
